@@ -2,6 +2,7 @@
   - Improved error/status trapping ($@ can be elusive in Mason)
   - Added default HTML header/footer, and override methods
   - Changed MIME Type guesser from File::Path to Media::Type::Simple
+  - Workaround for undef warnings tickled by nested anon components
 
 2010-01-14: .005
   - Make net_server and handler_class methods work as setters
